--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://bpapin19.github.io/portfolio/",
+  "homepage": "http://brandonpapin.com",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
